# cookiecutter-cms

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.md  appveyor.yml  cookiecutter.json
.github/: dependabot.yaml
.github/reference-workflows/: CI_1_1_1.yaml  CI_1_1_2.yaml  CI_1_1_3_1.yaml  CI_1_1_3_2.yaml  CI_1_2_1.yaml  CI_1_2_2.yaml  CI_1_2_3_1.yaml  CI_1_2_3_2.yaml  CI_1_3_1.yaml  CI_1_3_2.yaml  CI_1_3_3_1.yaml  CI_1_3_3_2.yaml  CI_2_1_1.yaml  CI_2_1_2.yaml  CI_2_1_3_1.yaml  CI_2_1_3_2.yaml  CI_2_2_1.yaml  CI_2_2_2.yaml  CI_2_2_3_1.yaml  CI_2_2_3_2.yaml  CI_2_3_1.yaml  CI_2_3_2.yaml  CI_2_3_3_1.yaml  CI_2_3_3_2.yaml  README.md
.github/workflows/: codeql.yml  verify-ghas.yaml
cihelpers/: osx_travis_py_helper.sh
docs/: Makefile  conf.py  index.rst  make.bat  nuances.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: regenerate_references.sh  run_yaml.py  setup_cookiecutter.py
{{cookiecutter.repo_name}}/: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
{{cookiecutter.repo_name}}/.github/: CONTRIBUTING.md
{{cookiecutter.repo_name}}/.github/workflows/: CI.yaml  codeql.yaml
{{cookiecutter.repo_name}}/devtools/: README.md  create_dev_env.py
{{cookiecutter.repo_name}}/devtools/appveyor/: install_conda.ps1
{{cookiecutter.repo_name}}/devtools/conda-envs/: test_env.yaml
{{cookiecutter.repo_name}}/devtools/conda-recipe/: bld.bat  build.sh  meta.yaml
{{cookiecutter.repo_name}}/devtools/github-actions/: initialize_conda.sh
{{cookiecutter.repo_name}}/devtools/legacy-miniconda-setup/: before_install.sh
{{cookiecutter.repo_name}}/devtools/scripts/: create_conda_env.py  initialize_conda.sh
{{cookiecutter.repo_name}}/devtools/travis-ci/: before_install.sh  install.sh
{{cookiecutter.repo_name}}/docs/: Makefile  README.md  api.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  make.bat  requirements.yaml  user_guide.rst
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.repo_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __init__.py  _version.py  extras.py  py.typed  {{cookiecutter.first_module_name}}.py  {{cookiecutter.first_package_name}}.py  {{cookiecutter.repo_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/data/: README.md
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/tests/: __init__.py  test_{{cookiecutter.repo_name}}.py
