# Helper file to handle all configs

# setuptools configuration.
# see https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
# Self-descriptive entries which should always be present
name = {{cookiecutter.repo_name}}
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}
description = {{cookiecutter.description}}
long_description = file: README.md
long_description_content_type = "text/markdown"
version = attr: {{cookiecutter.repo_name}}.__version__
license = {{cookiecutter.open_source_license}}
python_requires = ">=3.7"
# See https://pypi.org/classifiers/
classifiers ={% if cookiecutter.open_source_license == 'MIT' %}
    License :: OSI Approved :: MIT License{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}
    License :: OSI Approved :: BSD License{% elif cookiecutter.open_source_license == 'LGPLv3' %}
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+){% endif %}
    Programming Language :: Python :: 3
# Update the urls and uncomment, once the hosting is set up.
#project_urls =
#    Source = https://github.com/<username>/{{cookiecutter.repo_name}}/
#    Documentation = https://{{cookiecutter.repo_name}}.readthedocs.io/
# Other possible metadata.
# Ref https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
#keywords = one, two
#platforms = ["Linux",
#             "Mac OS-X",
#             "Unix",
#             "Windows"]

[options]
# As of version 0.971, mypy does not support type checking of installed zipped
# packages (because it does not actually import the Python packages).
# We declare the package not-zip-safe so that our type hints are also available
# when checking client code that uses our (installed) package.
# Ref:
# https://mypy.readthedocs.io/en/stable/installed_packages.html?highlight=zip#using-installed-packages-with-mypy-pep-561
zip_safe = False
install_requires =
    importlib-resources; python_version<"3.10"
tests_require =
    pytest>=6.1.2
    pytest-runner
# Which Python importable modules should be included when your package is installed
# Handled automatically by setuptools. Use 'exclude' to prevent some specific
# subpackage(s) from being added, if needed
packages = find:
# Alternatively, see ; https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
#package_dir =
#    =src
[options.packages.find]
where = .

# Optionally, include package data to ship with your package
# Customize MANIFEST.in if the general case does not suit your needs
[options.package_data]
{{cookiecutter.repo_name}} = py.typed

[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*
    # Omit generated versioneer
    {{cookiecutter.repo_name}}/_version.py

[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 119

[versioneer]
# Automatic version numbering scheme
VCS = git
style = pep440
versionfile_source = {{cookiecutter.repo_name}}/_version.py
versionfile_build = {{cookiecutter.repo_name}}/_version.py
tag_prefix = ''

[aliases]
test = pytest
